# mdbook-buildtime-annotations

./: Cargo.toml  README.md  clippy.toml
book/: book.toml  footer.css
src/: cli.rs  lib.rs  main.rs
